<resources>
    <string name="app_name">网抑云音乐1</string>
    <string name="Local_music">本地音乐</string>
    <string name="online_music">线上音乐</string>
    <string name="main_me">我的</string>
    <string name="main_find">发现</string>
    <string name="me_podcast">博客</string>
    <string name="main_attention">关注</string>
    <string name="main_CloudVillage">云村</string>
    <string name="songListCategory">歌单分类:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>